# tbkpy-core

./: CMakeLists.txt  MANIFEST.in  pyproject.toml  setup.py
src/tbkpy_core/test/: ping.py  pong.py  test.py
tbkpylib/_core/: module.cpp
